k8s/cluster-config/cilium/base/gateway-public.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  gatewayClassName: cilium
  addresses:
    - type: IPAddress
      value: PLACEHOLDER
  infrastructure:
    labels:
      network: public
    annotations:
      io.cilium/lb-ipam-sharing-key: public-shared-ip
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "PLACEHOLDER"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: public-tls-secret
